Bug 187336 - REGRESSION(r233495) [cairo] drawGlyphsShadow should use the fast path for zero blur-radius
Summary: REGRESSION(r233495) [cairo] drawGlyphsShadow should use the fast path for zer...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-05 01:03 PDT by Fujii Hironori
Modified: 2018-07-05 18:57 PDT (History)
5 users (show)

See Also:


Attachments
Patch (4.13 KB, patch)
2018-07-05 01:30 PDT, Fujii Hironori
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews205 for win-future (12.79 MB, application/zip)
2018-07-05 05:30 PDT, EWS Watchlist
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2018-07-05 01:03:35 PDT
REGRESSION(r233495) [cairo] drawGlyphsShadow should use the fast path for zero blur-radius

drawGlyphsShadow has a fast path to draw a shadow without a
shadow layer. Since r233495, it is not used for zero blur-radius shadow.

In Bug 187244, I changed ShadowState::isRequired to return true
for zero blur-radius. This is not a right fix.
Comment 1 Fujii Hironori 2018-07-05 01:30:34 PDT
Created attachment 344312 [details]
Patch
Comment 2 EWS Watchlist 2018-07-05 05:30:13 PDT
Comment on attachment 344312 [details]
Patch

Attachment 344312 [details] did not pass win-ews (win):
Output: https://webkit-queues.webkit.org/results/8443647

New failing tests:
http/tests/security/video-poster-cross-origin-crash2.html
Comment 3 EWS Watchlist 2018-07-05 05:30:25 PDT
Created attachment 344321 [details]
Archive of layout-test-results from ews205 for win-future

The attached test failures were seen while running run-webkit-tests on the win-ews.
Bot: ews205  Port: win-future  Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Comment 4 Fujii Hironori 2018-07-05 18:57:17 PDT
Comment on attachment 344312 [details]
Patch

Clearing flags on attachment: 344312

Committed r233556: <https://trac.webkit.org/changeset/233556>
Comment 5 Fujii Hironori 2018-07-05 18:57:22 PDT
All reviewed patches have been landed.  Closing bug.