REGRESSION(r233495) [cairo] drawGlyphsShadow should use the fast path for zero blur-radius https://bugs.webkit.org/show_bug.cgi?id=187336

Reviewed by Carlos Garcia Campos.

Source/WebCore:

drawGlyphsShadow has a fast path to draw a shadow without a shadow
layer. Since r233495, it is not used for zero blur-radius shadow.

In Bug 187244, I changed ShadowState::isRequired not to check
blur-radius is zero. This is not a right fix.

This change reverts r233495.

No new tests (Covered by existing tests).

* platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::ShadowState::isRequired const): Return false if
'blur' is zero.
(WebCore::Cairo::fillRectWithRoundedHole): Use
ShadowState::isVisible instead of ShadowState::isRequired to check
a shadow should be drawn.

LayoutTests:

* platform/gtk/TestExpectations: Unmarked fast/text/multiple-text-shadow-overflow-layout-rect.html.

Canonical link: https://commits.webkit.org/202635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233556 268f45cc-cd09-0410-ab3c-d52691b4dbfc